@@ -1,3 +1,6 @@
+Kiwix 0.8 rc2
+* Use xapian-core-1.0.14
+ 
 Kiwix 0.8 rc1
 * High reducing of the xapian index disk usage
 * Improvement of the history management
